--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<div class="box box1">
 						<img src="img/cake_01.jpg" alt="">
 						<div class="course_title">
-							<h3>檸檬優格磅蛋糕</h3>
+							<h3>檸檬糖霜磅蛋糕</h3>
 						</div>
 					</div>
 					<div class="box box2">
